Regression: Smart UV project stopped aligning islands vertically #110724
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#110724
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Win11
Graphics card: 4090 RTX
Blender Version
Broken: (3.6.1)
Worked: (3.5)
Caused by
4b4babae8b
Short description of error
In the past it was possible to easily unwrap selection of many many many many many elements and they will be aligned vertically based on which direction they are longer in. This is super useful for anisotropic materials like wood for example or even brushed steel because it will usually be brushed in the longer direction.
Exact steps for others to reproduce the error
Open the attached .blend file in 3.3.5 and use Smart UV Project in Edit Mode
Then open the same file in 3.6.1 and try Smart UV Project again
Thanks for the report. I can confirm (broke between 3.5-3.6).
@Chris_Blackbourn , can you check? (Any idea which of your commit has affected this? Otherwise I'll bisect)
I think this is a duplicate of #109906
(Although, with a different operator, same underlying cause)
If you're hunting for the exact change, the class which has the changed behavior is
UVMinimumEnclosingSquareFinder
See also
rotate_inside_square
.There might be different times in the history when it's active/inactive...
BTW, most likely same fix, after smart unwrap, just use "UV > Align Rotation > Auto" and the results will probably be better than with 3.5
Thanks, will do :)
Caused by
4b4babae8b
(both bugs introduced by different commits)
Smart UV project stopped aligning islands verticallyto Regression: Smart UV project stopped aligning islands verticallyBlender Version:
The issue is still there, I always have to select the elements that were mapped to the bottom right are rotate them by 90 degrees so that everything is aligned properly.
The Align Rotation operator doesn't give better results with any settings I tried.
Sorry if I reopened this issue wrongly.
@AdamPreisler hi, can you open a new report with necessary details?